corpus/cpp/scope_declaration/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.cpp:2:12: error: [missing_name] identifier not found in scope
help: check for typos, missing #include, or missing namespace qualifier
name: missing_value
use : return missing_value;
| src/main.cpp:2:12
|     return missing_value;
|            ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output